# BSidesFW2025Badge

./: .gitignore  ARCHITECTURE.md  END_USER.md  HARDWARE.md  MEETING_NOTES.md  PROGRAMMING.md  README.md  TODO.md  example_app_cache.json  image.h  main.ino  main.py  name.json  name_provisioner.py.template  pymakr.conf  pyproject.toml  tools.py
STLs/: BSides2025-ScreenBezel.stl  BSides2025-ScreenBezelV2.stl  BSides2025-ScreenBezelV3.stl  BSides2025-ScreenBezelV4.3mf  BSides2025-ScreenBezelV4.stl  BSides2025-ScreenBezelV5.stl  BSides2025-ScreenBezelV6.stl  BSides2025-ScreenBezelV7.stl  BSides2025-ScreenCover.stl  BSides2025-ScreenCoverV2.stl  BSides2025-ScreenCoverV3.stl  BSides2025-ScreenSupportV10.stl  BSides2025-ScreenSupportV2.stl  BSides2025-ScreenSupportV3.stl  BSides2025-ScreenSupportV4.stl  BSides2025-ScreenSupportV5.stl  BSides2025-ScreenSupportV6.stl  BSides2025-ScreenSupportV7.stl  BSides2025-ScreenSupportV8.stl  BSides2025-ScreenSupportV9.stl  BSides2025-badge-final-print.3mf  BSidesV2-Badge-Slot-Layout.stl  Badge Battery Cover 4.stl
badge_creator/: readme.md  reg_station_setup.md  reg_station_setup.sh  requirements.txt  setup.md
firmware/: README.md
src/: accelerometer.py  app_directory.py  audio.py  boot.py  bsp.py  buttons.py  controller.py  displays.py  flag.txt  hardware_rev.py  hardware_setup.py  icontroller.py  leds.py  main.py  name.json.example  pymakr.conf  single_app_runner.py  test.py
tests/: __init__.py  fake_controller.py  test_list_view.py  test_smart_config.py
typings/: badgechal.pyi  gc9a01.pyi  neopixel.pyi  time.pyi  (+1 more)
(+98 files in other folders)
